<resources>
    <string name="app_name">LifeShare_Android</string>

    <string name="empty_message">빈칸 없이 입력해 주세요</string>
    <string name="exist_message">취소 되었습니다</string>

    <string name="id_text">아이디</string>
    <string name="password_text">비밀번호</string>
    <string name="check_password_text">비밀번호 확인</string>
    <string name="name_text">이름</string>
    <string name="ex_user_phone_number">전화번호 Ex) 010-XXXX-XXXX</string>
    <string name="ex_account_number">계좌번호 Ex) 352-XXXX-XXXX-XXXX</string>
    <string name="login_text">로그인</string>
    <string name="find_account_title_text">계정을 잊으셨나요?</string>
    <string name="find_id_text">아이디 찾기</string>
    <string name="find_password_text">비밀번호 찾기</string>
    <string name="no_id_text">계정이 없으신가요?</string>
    <string name="sign_up_text">회원가입</string>

    <string name="remittance_title">송금</string>
    <string name="lookup_title">조회</string>
    <string name="timeline_title">타임라인</string>
    <string name="addcard_title">카드추가</string>
    <string name="setting_title">설정</string>

    <string name="main_home_text">홈</string>
    <string name="main_send_button_text">송금</string>
    <string name="main_search_button_text">검색</string>
    <string name="main_create_button_text">개설</string>
    <string name="main_setting_button_text">설정</string>
    <string name="main_dutch_button_text">더치페이</string>
    <string name="main_remittance_button_text">보내기</string>

    <string-array name="genderLimit">
        <item>"남여혼용"</item>
        <item>"남여분리"</item>
        <item>"남성전용"</item>
        <item>"여성전용"</item>
    </string-array>

    <string name="logout_text">로그아웃 하시겠습니까?</string>
    <string name="yes_text">네</string>
    <string name="no_text">아니요</string>

</resources>
